<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.heesoopark.heesoo_countbook.Modify_values"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <TextView
        android:id="@+id/nametitle"
        android:textSize="28sp"
        android:layout_width="145dp"
        android:layout_height="64dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/nametitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inittitle"
        android:layout_width="145dp"
        android:layout_height="64dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="96dp"
        android:text="@string/inittitle"
        android:textSize="28sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentitle"
        android:layout_width="145dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textSize="28sp"
        android:text="@string/currenttitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inittitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/datetitle"
        android:layout_width="145dp"
        android:layout_height="64dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textSize="32sp"
        android:text = "@string/datetitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentitle"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/nameshow"
        android:layout_width="200dp"
        android:layout_height="64dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.631" />

    <TextView
        android:id="@+id/initshow"
        android:layout_width="100dp"
        android:layout_height="57dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameshow"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.535" />


    <TextView
        android:id="@+id/currentshow"
        android:layout_width="179dp"
        android:layout_height="61dp"
        android:textSize="32sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/initshow"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toRightOf="@+id/currentitle"
        android:layout_marginLeft="0dp"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/dateshow"
        android:layout_width="182dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/currentshow"
        app:layout_constraintLeft_toRightOf="@+id/datetitle"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/commenttitle"
        android:layout_width="165dp"
        android:layout_height="62dp"
        android:layout_marginLeft="16dp"
        android:textSize="32sp"
        android:text="@string/commenttitle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/datetitle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/commentshow"
        android:layout_width="169dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/dateshow"
        app:layout_constraintLeft_toRightOf="@+id/commenttitle"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.081" />

    <Button
        android:id="@+id/EditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/commenttitle" />


</android.support.constraint.ConstraintLayout>
